examples/test/testpolicy10748.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10748
  namespace: namespace343
spec:
  podSelector:
    matchLabels:
      key49: value23
      key24: value2
      key19: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value44
          key38: value15
      podSelector:
        matchLabels:
          key49: value37
          key9: value14
